<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">AC</string>
    <string name="delete">←</string>
    <string name="percent">%</string>
    <string name="split">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="multiply">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="comma">.</string>
    <string name="equal">=</string>
    <string name="negative">+/-</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="sqrt">√</string>
    <string name="factorial">!n</string>
    <string name="absolut">abs</string>
    <string name="settings">settings</string>

</resources>